deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: generate-playlist
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: generate-playlist
  namespace: generate-playlist
  labels:
    keel.sh/policy: major
    keel.sh/trigger: poll
  annotations:
    keel.sh/pollSchedule: "@every 5m"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: generate-playlist
  template:
    metadata:
      labels:
        app: generate-playlist
    spec:
      containers:
      - name: generate-playlist
        image: ghcr.io/stevendejongnl/generate-playlist:latest
        ports:
          - containerPort: 5000
        volumeMounts:
          - name: data
            mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: playlist-data
---
apiVersion: v1
kind: Service
metadata:
  name: generate-playlist-service
  namespace: generate-playlist
spec:
  selector:
    app: generate-playlist
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: generate-playlist-nginx
  namespace: generate-playlist
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: spotify.madebysteven.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: generate-playlist-service
            port:
              number: 80
